# RayTracingStudy

./: .gitignore  CMakeLists.txt  README.md  main.cpp  open_vs2019_community.bat  ray.h  vec3.h
